plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

java {
    toolchain { languageVersion = JavaLanguageVersion.of(25) } // <- 25
}

repositories { mavenCentral() }

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.3'
}

test { useJUnitPlatform() }

application {
    mainClass = 'ui.MainApp'
    applicationDefaultJvmArgs = [
            '--add-modules=javafx.controls',          // dacă folosești dependența directă
            '--enable-native-access=javafx.graphics'  // <- important
    ]
}

javafx {
    version = "25"                    // <- 25 ca să se potrivească cu JDK 25
    modules = [ 'javafx.controls' ]
}

// ca să apară și în teste (dacă ai teste care ating JavaFX)
tasks.withType(Test).configureEach {
    jvmArgs '--enable-native-access=javafx.graphics'
}

// dacă vrei sigur și pe task-ul run:
tasks.named('run') {
    jvmArgs '--enable-native-access=javafx.graphics'
}
